--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
+    "@angular/fire": "^7.2.0",
     "@angular/forms": "~12.2.0",
     "@angular/localize": "~12.2.0",
     "@angular/material": "^12.2.12",
@@ -25,9 +26,11 @@
     "@lottiefiles/lottie-player": "^1.5.3",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.1",
     "ngx-bootstrap": "^7.1.0",
     "ngx-toastr": "^14.2.1",
     "ngx-useful-swiper": "^10.0.1",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "swiper": "^6.8.4",
     "tslib": "^2.3.0",
